--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-html-parser": "^2.0.2",
+    "react-responsive-carousel": "^3.2.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-word-limit": "^1.0.1",
     "reactstrap": "^8.4.1"
   },
   "scripts": {
