--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "html-react-parser": "^0.10.3",
+    "internal-ip": "^6.0.0",
     "moment": "^2.24.0",
+    "public-ip": "^4.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-html-parser": "^2.0.2",
+    "react-push-notification": "^1.3.0",
     "react-responsive-carousel": "^3.2.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-text-limit-component": "^1.0.8",
     "react-word-limit": "^1.0.1",
     "reactstrap": "^8.4.1"
   },
