--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "moment": "^2.24.0",
     "public-ip": "^4.0.1",
     "react": "^16.13.1",
+    "react-cookie-consent": "^5.2.0",
     "react-dom": "^16.13.1",
     "react-html-parser": "^2.0.2",
     "react-push-notification": "^1.3.0",
